--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>Landing Page</title>
     </head>
     <body>
-        <div class="container">
-            <h2><a href="/">Header Logo</a></h2>
-            <h3><a href="/">header link one</a></h3>
-            <h3><a href="/">header link two</a></h3>
-            <h3><a href="/">header link three</a></h3>
+        <div>
+            <ul>
+                <li><a href="/">Header Logo</a></li>
+                <li><a href="/">header link one</a></li>
+                <li><a href="/">header link two</a></li>
+                <li><a href="/">header link three</a></li>
+            </ul>
 
-            <div class="container">
+            <div>
                 <div>
                     <h1>This website is awesome</h1>
                     <p>This is some subtext that goes under the main title. it's a smaller font</p>
