--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <li><a href="/">header link three</a></li>
             </ul>
 
-            <div>
-                <div>
+            <div class="container1">
+                <div class="item">
                     <h1>This website is awesome</h1>
                     <p>This is some subtext that goes under the main title. it's a smaller font</p>
                     <button>Sign up</button>
                 </div>
-                <div>
+                <div class="item">
                     <img src="https://images.pexels.com/photos/4290216/pexels-photo-4290216.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="portrait image">
                 </div>
             </div>
