--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="container1">
             <h2>random info</h2>
             <div class="square">
                 <div class="description"></div>
