adding margin to body & still trying to figure out flex on sect 2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Landing Page</title>
     </head>
     <body>
+        <!-- sect 1 -->
         <div>
             <ul>
                 <li><a href="/">Header Logo</a></li>
@@ -25,26 +26,31 @@
                 </div>
             </div>
         </div>
-        <div class="container1">
+        <!-- sect 2 -->
+        <div>
             <h2>random info</h2>
-            <div class="square">
-                <div class="description"></div>
-            </div>
-            <div class="square">
-                <div class="description"></div>
-            </div>
-            <div class="square">
-                <div class="description"></div>
-            </div>
-            <div class="square">
-                <div class="description"></div>
+            <div class="container1">
+                <div class="square">
+                    <div class="description"></div>
+                </div>
+                <div class="square">
+                    <div class="description"></div>
+                </div>
+                <div class="square">
+                    <div class="description"></div>
+                </div>
+                <div class="square">
+                    <div class="description"></div>
+                </div>
             </div>
         </div>
-        <div>
+        <!-- sect 3 -->
+        <div class="container2">
             <p>Be clear about your intentions, thoughtful in your choices, simple in your desires and content in your days... Life will present us with enough challenges. We don’t need to set ourselves up for more by fueling expectations or living rigidly</p>
             <p>- Mark Sisson on Stoic philosophy</p>
         </div>
-        <div>
+        <!-- sect 4 -->
+        <div class="container2">
             <div>call to action! it's time!</div>     
             <footer>Copyright</footer>       
         </div>
