--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <!-- sect 2 -->
         <div>
-            <h2>random info</h2>
+            <h2 text-align: center>random info</h2>
             <div class="container1">
                 <div class="square">
                     <div class="description"></div>
