--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <!-- sect 1 -->
-        <div>
+        <div class="footer">
             <ul>
-                <li><a href="/">Header Logo</a></li>
-                <li><a href="/">header link one</a></li>
-                <li><a href="/">header link two</a></li>
-                <li><a href="/">header link three</a></li>
+                <li><a href="index.html">Header Logo</a></li>
+                <li><a href="index.html">header link one</a></li>
+                <li><a href="index.html">header link two</a></li>
+                <li><a href="index.html">header link three</a></li>
             </ul>
 
             <div class="container1">
@@ -45,14 +45,14 @@
             </div>
         </div>
         <!-- sect 3 -->
-        <div class="container2">
+        <div class="container2 sect3">
             <p>Be clear about your intentions, thoughtful in your choices, simple in your desires and content in your days... Life will present us with enough challenges. We don’t need to set ourselves up for more by fueling expectations or living rigidly</p>
             <p>- Mark Sisson on Stoic philosophy</p>
         </div>
         <!-- sect 4 -->
         <div class="container2">
             <div>call to action! it's time!</div>     
-            <footer>Copyright</footer>       
+            <footer class="footer">Copyright</footer>       
         </div>
     </body>
 </html>
